Jion method added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Test Document</title>
 </head>
 <body>
+    <h2>Arreglo original:</h2>
     <div id="countries"></div>
+
+    <h3>Arreglos en acció<nav></nav></h3>
 
     <button id="btnPush">Push</button>
     <button id="btnPop">Pop</button>
     <button id="btnUnshift">Unshift</button>
     <button id="btnShift">Shift</button>
+    <button id="btnJoin">Join with '-'</button>
 
     <script src="./main.js"></script>
 </body>
