Splice add and remove element

--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Document</title>
 </head>
+
 <body>
     <h2>Arreglo original:</h2>
     <div id="countries"></div>
 
-    <h3>Arreglos en acció<nav></nav></h3>
+    <h3>Arreglos en acció<nav></nav>
+    </h3>
 
-    <button id="btnPush">Push</button>
-    <button id="btnPop">Pop</button>
-    <button id="btnUnshift">Unshift</button>
-    <button id="btnShift">Shift</button>
-    <button id="btnJoin">Join with '-'</button>
-
+    <p>
+        <button id="btnPush">Push</button>
+        <button id="btnPop">Pop</button>
+        <button id="btnUnshift">Unshift</button>
+        <button id="btnShift">Shift</button>
+    </p>
+    <p>
+        <button id="btnJoin">Join with '-'</button>
+        <button id="btnSpliceRemove">Splice(1, 1)</button>
+        <button id="btnSpliceAdd">Splice(1, 1, 'España')</button>
+    </p>
     <script src="./main.js"></script>
 </body>
+
 </html>
