Add reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Arreglo original:</h2>
     <div id="countries"></div>
 
-    <h3>Arreglos en acció<nav></nav>
+    <h3>Arreglos en acción<nav></nav>
     </h3>
 
     <p>
@@ -24,6 +24,9 @@
         <button id="btnJoin">Join with '-'</button>
         <button id="btnSpliceRemove">Splice(1, 1)</button>
         <button id="btnSpliceAdd">Splice(1, 1, 'España')</button>
+    </p>
+    <p>
+        <button id="btnReset">x Reset</button>
     </p>
     <script src="./main.js"></script>
 </body>
